fix: center scroll arrows on wrapper edge so they stay visible

--- a/css/style.css
+++ b/css/style.css
@@ -3229,11 +3229,11 @@ body.blog-page::before {
 }
 
 .member-scroll-left {
-  left: -54px;
+  left: -21px;
 }
 
 .member-scroll-right {
-  right: -54px;
+  right: -21px;
 }
 
 .post-card {
